--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
-    "start": "chokidar './src/**/*.scss' -c 'npm run build-css' & chokidar './src/js/**/*.js' -c 'npm run build-js' & astro dev",
-    "build-css": "sass ./src/styles/styles.scss ./dist/css/style.css --style expanded --source-map",
-    "build-js": "terser ./src/js/main.js --compress --mangle --source-map filename='bundle.js.min.map' -o ./dist/js/bundle.min.js",
+    "start": "chokidar './src/**/*.scss' -c 'npm run build-css' & astro dev",
+    "build-css": "sass ./src/styles/styles.scss ./src/styles/style.css --style expanded --source-map",
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro"
