--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "classnames": "^2.3.2",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "firebase": "^10.5.0",
     "lucide-react": "^0.287.0",
     "next": "^13.5.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-router-dom": "^6.16.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7"
