--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.38.2",
     "@tremor/react": "^3.9.2",
     "axios": "^1.5.1",
     "class-variance-authority": "^0.7.0",
@@ -25,9 +26,11 @@
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "firebase": "^10.5.0",
+    "i": "^0.3.7",
     "lucide-react": "^0.287.0",
     "next": "^13.5.5",
     "next-themes": "^0.2.1",
+    "npm": "^10.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
